<resources>
    <string name="app_name">RubyChinaAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="menu_new_post">NewPost</string>
    <string name="menu_refresh">Refresh</string>
    <string name="favorite">收藏</string>
    <string name="preview">预览</string>
    <string name="publish">发布</string>
    <string name="topic_add_node_hint">选择节点</string>
    <string name="settings_normal">常规设置</string>
    <string name="settings_no_image_no_wifi">无图模式</string>
    <string name="settings_no_image_no_wifi_summary">2G/3G网络下不显示图片</string>
    <string name="settings_image_no_wifi_summary">2G/3G网络下显示图片</string>
    <string name="settings_more">其他</string>
    <string name="settings_clear_cache">清除图片缓存</string>
    <string name="settings_about">关于</string>
    <string name="settings_dialog_hint">提示</string>
    <string name="settings_logout_or_not">确定退出登录？</string>
    <string name="title_confirm_yes">确定</string>
    <string name="title_confirm_cancel">取消</string>
    <string name="settings_clear_cache_or_not">确定清除缓存？</string>

    <string name="title_activity_read_post">PostActivity</string>
    <string name="title_activity_reply_post">ReplyActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_photoview">PhotoViewActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_all_nodes">AllNodesActivity</string>
    <string name="title_activity_node">NodeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="default_username">你好，Ruby</string>

    <string name="share">分享</string>
    <string name="shareto">分享到</string>

    <string name="lost_connection">未联网</string>
    <string name="wifi_connected">已联网</string>
</resources>
